--- a/trabalhos/templates/trabalhos/base.html
+++ b/trabalhos/templates/trabalhos/base.html
@@ -45,7 +45,7 @@
             color: #fff;
             width: 100%;
             box-sizing: border-box;
-            padding: 1rem 0; 
+            padding: 1rem 0;
             margin-bottom: 2rem;
         }
 
@@ -66,7 +66,7 @@
         }
 
         .banner-top {
-            background-image: url("{% static 'trabalhos/img/banner.png' %}");
+            background-image: url("{% static 'img/banner.png' %}");
             background-size: cover;
             background-position: center;
             min-height: 40vh;
@@ -120,7 +120,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="{% static 'trabalhos/img/logo.png' %}" alt="Prêmio Sema" height="100">
+                <img src="{% static 'img/logo.png' %}" alt="Prêmio Sema" height="100">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
@@ -177,7 +177,7 @@
     {% block precontent %}{% endblock %}
 
     {% block page_header %}{% endblock %}
-    
+
     <div class="container">
         {% block content %}{% endblock %}
     </div>
