Alteracao no formulário

--- a/trabalhos/templates/trabalhos/enviar_trabalho.html
+++ b/trabalhos/templates/trabalhos/enviar_trabalho.html
@@ -32,6 +32,8 @@
     <div class="mb-3">{{ form.banco.label_tag }} {{ form.banco }}</div>
     <div class="mb-3">{{ form.agencia.label_tag }} {{ form.agencia }}</div>
     <div class="mb-3">{{ form.conta_corrente.label_tag }} {{ form.conta_corrente }}</div>
+    <div class="mb-3">{{ form.tipo_chave_pix.label_tag }} {{ form.tipo_chave_pix }}</div>
+    <div class="mb-3">{{ form.chave_pix.label_tag }} {{ form.chave_pix }}</div>
 
     <!-- Dados Profissionais -->
     <h5>Dados Profissionais</h5>
@@ -54,7 +56,7 @@
     <hr>
     <div class="border p-3 bg-light mb-3" style="max-height: 250px; overflow-y: auto; font-size: 0.95em;">
         <p>
-            Ao realizar minha inscrição no Prêmio RS de Jornalismo Ambiental 2021 autorizo, expressamente, o Governo
+            Ao realizar minha inscrição no Prêmio RS de Jornalismo Ambiental 2025 autorizo, expressamente, o Governo
             do Estado do RS, a Secretaria do Meio Ambiente e Infraestrutura do Estado e a FEPAM, doravante
             denominadas CONTROLADORAS, que, nos termos dos arts. 7º e 11 da Lei 13.709/2018, tratem os meus dados
             pessoais para fins de inscrição, realização e divulgação do Concurso, podendo compartilha-los com outros
