--- a/trabalhos/templates/trabalhos/enviar_trabalho.html
+++ b/trabalhos/templates/trabalhos/enviar_trabalho.html
@@ -17,6 +17,14 @@
     {% csrf_token %}
     {{ form.non_field_errors }}
 
+    {% for field in form %}
+    {% for error in field.errors %}
+    <div class="alert alert-danger">
+        <strong>{{ field.label }}:</strong> {{ error }}
+    </div>
+    {% endfor %}
+    {% endfor %}
+
     <!-- Dados Pessoais -->
     <h5>Dados Pessoais</h5>
     <hr>
