--- a/trabalhos/templates/trabalhos/base.html
+++ b/trabalhos/templates/trabalhos/base.html
@@ -154,11 +154,9 @@
                         </ul>
                     </li>
                     {% elif user.is_authenticated and user.tipo == 'avaliador' %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'avaliar_trabalhos' %}">Avaliar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'painel_avaliador' %}">Avaliar</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Sair</a></li>
-                    {% endif %}
-
-                    {% if not user.is_authenticated or user.tipo != 'autor' %}
+                    {% else %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="acessoMenu" role="button"
                             data-bs-toggle="dropdown" style="padding: 8px 12px;">
