--- a/trabalhos/templates/trabalhos/base.html
+++ b/trabalhos/templates/trabalhos/base.html
@@ -146,6 +146,11 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
+                            <li><a class="dropdown-item" href="{% url 'painel_comissao_ranking' %}">Ranking (Categorias)</a></li>
+                            <li><a class="dropdown-item" href="{% url 'painel_comissao_ranking_tipo' 'microtema' %}">Ranking (Microtemas)</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
                             <li><a class="dropdown-item" href="{% url 'cadastro_usuario' %}">Cadastrar Usuário</a></li>
                             <li>
                                 <hr class="dropdown-divider">
