Troca de titulo

--- a/trabalhos/templates/trabalhos/inscricoes_encerradas.html
+++ b/trabalhos/templates/trabalhos/inscricoes_encerradas.html
@@ -1,7 +1,10 @@
 {% extends "trabalhos/base.html" %}
+
+{% block title %}Inscrição{% endblock %}
+
 {% block content %}
 <div class="alert alert-warning mt-4">
   <h4>Inscrições encerradas</h4>
-  <p>O período de inscrições para o Prêmio SEMA foi encerrado.</p>
+  <p>O período de inscrições para o Prêmio SEMA-FEPAM foi encerrado.</p>
 </div>
 {% endblock %}
