Ajuste na página de contato

--- a/trabalhos/templates/trabalhos/contato.html
+++ b/trabalhos/templates/trabalhos/contato.html
@@ -8,7 +8,7 @@
   <!-- Título -->
   <div class="text-center mb-5">
     <h2 class="fw-bold">Fale Conosco</h2>
-    <p class="text-muted">Entre em contato com a organização do Prêmio Sema para dúvidas, informações ou suporte.</p>
+    <p class="text-muted">Entre em contato com a organização do Prêmio Sema-Fepam para dúvidas, informações ou suporte.</p>
   </div>
 {% endblock %}
 
