Ajuste área do adm

--- a/trabalhos/templates/trabalhos/base.html
+++ b/trabalhos/templates/trabalhos/base.html
@@ -142,7 +142,7 @@
                             {{ user.nome }}
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="{% url 'painel_admin' %}">Painel</a></li>
+                            <!-- <li><a class="dropdown-item" href="{% url 'painel_admin' %}">Painel</a></li> -->
                             <li><a class="dropdown-item" href="/admin/">Admin</a></li>
                             <li>
                                 <hr class="dropdown-divider">
